Includes the first data corruption bug found so far.
Make sure you run the validate-blocks command once to remove any invalid blocks and rerun a full backup to make sure you can do a full restore.

* Fixed issue where if a part failed to upload the block would still be added as correct.
* Fixed startbackupservice.sh to call underscorebackup instead of backup.
* Fixed several issues where stand alone trim-repository command was just not working.
* Only add directories to the repository that has at least one included file.

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '0.2'
+version '0.2.1'
 
 sourceCompatibility = 1.8
 
@@ -66,6 +66,10 @@ task installer(dependsOn: [guiexe, consoleexe, installerDef], type:Exec) {
     workingDir 'windows'
     executable 'C:\\Program Files (x86)\\Inno Setup 6\\iscc.exe'
     args "innosetup-expanded.iss"
+}
+
+task allDist {
+    dependsOn installer, distZip, distTar
 }
 
 distributions {
