--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,9 @@
-import edu.sc.seis.launch4j.tasks.Launch4jLibraryTask
-
 plugins {
     id 'java'
     id 'application'
     id 'distribution'
     id 'edu.sc.seis.launch4j' version '2.5.2'
+    id "org.beryx.runtime" version "1.3.0"
 }
 
 application {
@@ -13,10 +12,10 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '0.3.2'
+version '0.3.3'
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = 11
+targetCompatibility = 11
 
 sourceSets {
     main {
@@ -34,6 +33,17 @@ sourceSets {
     }
 }
 
+runtime {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+}
+
+tasks.runtime.doLast {
+    copy {
+        from('src/main/resources')
+        into("$buildDir/image/bin")
+    }
+}
+
 tasks.named("compileJava").get().dependsOn("webui")
 
 tasks.withType(JavaCompile) {
@@ -42,20 +52,20 @@ tasks.withType(JavaCompile) {
 
 launch4j {
     priority = "idle"
-    jreMinVersion = JavaVersion.VERSION_1_8
+    jreMinVersion = 11
     maxHeapSize = 256
     bundledJrePath = "..\\jre"
     bundledJre64Bit = true
     mainClassName = 'com.underscoreresearch.backup.cli.Main'
-    icon = "${rootProject.projectDir}\\windows\\application.ico"
+    icon = "${rootProject.projectDir}/windows/application.ico"
 }
 
-task consoleexe(type: Launch4jLibraryTask) {
+task consoleexe(type: edu.sc.seis.launch4j.tasks.Launch4jLibraryTask) {
     outfile = "underscorebackup.exe"
     headerType = "console"
 }
 
-task guiexe(type: Launch4jLibraryTask) {
+task guiexe(type: edu.sc.seis.launch4j.tasks.Launch4jLibraryTask) {
     mainClassName = 'com.underscoreresearch.backup.cli.Main'
     cmdLine = "interactive"
     outfile = "underscorebackup-gui.exe"
@@ -71,7 +81,7 @@ task installerDef(type: Copy) {
     into("${rootProject.projectDir}/windows")
 }
 
-task installer(dependsOn: [guiexe, consoleexe, installerDef], type:Exec) {
+task installer(dependsOn: [jre, guiexe, consoleexe, installerDef], type:Exec) {
     workingDir 'windows'
     executable 'C:\\Program Files (x86)\\Inno Setup 6\\iscc.exe'
     args "innosetup-expanded.iss"
@@ -114,10 +124,10 @@ distributions {
     }
 }
 
-
 dependencies {
+
     implementation (
-            'com.dropbox.core:dropbox-core-sdk:4.0.1',
+            'com.dropbox.core:dropbox-core-sdk:5.2.0',
             'com.cronutils:cron-utils:9.1.6',
             'com.fasterxml.jackson.core:jackson-databind:2.13.2.2',
             'com.google.guava:guava:31.1-jre',
