--- a/webui/package.json
+++ b/webui/package.json
@@ -4,20 +4,22 @@
   "private": false,
   "dependencies": {
     "@date-io/date-fns": "^2.13.1",
-    "@emotion/react": "^11.8.1",
+    "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.5",
-    "@mui/icons-material": "^5.5.1",
-    "@mui/lab": "^5.0.0-alpha.75",
-    "@mui/material": "^5.5.1",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/lab": "^5.0.0-alpha.79",
+    "@mui/material": "^5.6.3",
+    "@types/react": "^17.0.44",
+    "@types/react-dom": "^17.0.16",
     "date-fns": "^2.28.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-transition-group": "^4.4.2",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.7",
     "typescript": "^4.6.3"
   },
   "scripts": {
@@ -30,13 +32,16 @@
     "not ios_saf < 13"
   ],
   "devDependencies": {
-    "@parcel/packager-raw-url": "^2.4.0",
-    "@parcel/transformer-webmanifest": "^2.4.0",
+    "@parcel/packager-raw-url": "^2.5.0",
+    "@parcel/transformer-webmanifest": "^2.5.0",
+    "@types/lodash": "^4.14.182",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.5",
     "gulp": "^4.0.2",
     "gulp-copy": "^4.0.1",
     "gulp-inline-source": "^4.0.0",
     "gulp-replace": "^1.1.3",
-    "parcel": "^2.4.0",
+    "parcel": "^2.5.0",
     "process": "^0.11.10"
   }
 }
