--- a/webui/package.json
+++ b/webui/package.json
@@ -24,8 +24,8 @@
   },
   "scripts": {
     "start": "parcel serve ./src/index.html -p 3000",
-    "build": "rm -rf build ../src/main/resources/web .parcel-cache && parcel build ./src/index.html --dist-dir build && gulp",
-    "clean": "rm -rf build .parcel-cache"
+    "build": "gulp",
+    "clean": "gulp clean"
   },
   "browserslist": [
     "defaults",
@@ -37,10 +37,12 @@
     "@types/lodash": "^4.14.182",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
+    "cypress": "^9.7.0",
     "gulp": "^4.0.2",
     "gulp-copy": "^4.0.1",
     "gulp-inline-source": "^4.0.0",
     "gulp-replace": "^1.1.3",
+    "del": "^6.1.1",
     "parcel": "^2.5.0",
     "process": "^0.11.10"
   }
