Contains a big change to how AES encryption works where it now uses GCM cipher modes. GCM is superior to CBC in that it offers authentication in addition to strong authentication. The change is backwards compatible and old backups will still be readable even though encrypted with CBC. This unfortunately means that once you have upgraded to the 0.9.16 you can not read your backups in old versions of Underscore Backup.
Added the ability to change passwords for existing backups.

Fixed several bugs:
* Optimize schedule did not properly reset when triggered.
* Fixed a problem where it was not detected if a backup root was emptied.
* Improved block validation to detect invalid encryption or error correction values.
* Small issue with repository trimmer progress not counting correctly.

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '0.9.15'
+version '0.9.16'
 
 sourceCompatibility = 11
 targetCompatibility = 11
@@ -73,7 +73,17 @@ tasks.withType(JavaCompile) {
     options.compilerArgs += ['-Xlint:unchecked']
 }
 
+task installerDef(type: Copy) {
+    from("${rootProject.projectDir}/windows/innosetup.iss")
+    rename("innosetup.iss", "innosetup-expanded.iss")
+    expand([
+            applicationVersion: "${version}"
+    ])
+    into("${rootProject.projectDir}/windows")
+}
+
 task copyIniFile(type:Copy) {
+    dependsOn(installerDef)
     from layout.projectDirectory.dir("windows/underscorebackup.l4j.ini")
     into layout.buildDirectory.dir("launch4j")
 }
@@ -99,15 +109,6 @@ task guiexe(type: edu.sc.seis.launch4j.tasks.Launch4jLibraryTask) {
     cmdLine = "interactive"
     outfile = "underscorebackup-gui.exe"
     headerType = "gui"
-}
-
-task installerDef(type: Copy) {
-    from("${rootProject.projectDir}/windows/innosetup.iss")
-    rename("innosetup.iss", "innosetup-expanded.iss")
-    expand([
-            applicationVersion: "${version}"
-    ])
-    into("${rootProject.projectDir}/windows")
 }
 
 task installer(dependsOn: [jre, guiexe, consoleexe, installerDef], type:Exec) {
