Adds a few new features that are currently experimental. * Adds option to not run backup while on battery power. Supported on Linux, Windows and OSX. * Adds a check to ensure that two instances of Underscore Backup are not writing logs to the same destination. * Introduces a new AES encoding scheme that allows multiple targets to share blocks (Not yet used). * Added an option to reset configuration in settings tag.
Also includes fixes for:
* Fixed a number of minor UTF-8 issues.
* Support current version of MUI in UI.
* Fixed several non critical race conditions concerning the UI.

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '1.0.1'
+version '1.1.0pre1'
 
 sourceCompatibility = 11
 targetCompatibility = 11
