--- a/webui/package.json
+++ b/webui/package.json
@@ -8,7 +8,8 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.5",
     "@mui/icons-material": "^5.6.2",
-    "@mui/lab": "^5.0.0-alpha.79",
+    "@mui/x-date-pickers": "^5.0.0",
+    "@mui/lab": "^5.0.0-alpha.97",
     "@mui/material": "^5.6.3",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.16",
@@ -38,11 +39,11 @@
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
     "cypress": "^9.7.0",
+    "del": "^6.1.1",
     "gulp": "^4.0.2",
     "gulp-copy": "^4.0.1",
     "gulp-inline-source": "^4.0.0",
     "gulp-replace": "^1.1.3",
-    "del": "^6.1.1",
     "parcel": "^2.5.0",
     "process": "^0.11.10"
   }
