--- a/webui/package.json
+++ b/webui/package.json
@@ -8,7 +8,7 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.5",
     "@mui/icons-material": "^5.6.2",
-    "@mui/lab": "^5.0.0-alpha.79",
+    "@mui/lab": "5.0.0-alpha.79",
     "@mui/material": "^5.6.3",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.16",
