--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
     id 'java'
     id 'application'
     id 'distribution'
-    id 'edu.sc.seis.launch4j' version '2.5.2'
-    id "org.beryx.runtime" version "1.3.0"
+    id 'edu.sc.seis.launch4j' version '2.5.3'
+    id 'org.beryx.runtime' version '1.12.7'
 }
 
 application {
@@ -14,10 +14,10 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '1.1.0pre1'
+version '1.1.0rc1'
 
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 17
+targetCompatibility = 17
 
 sourceSets {
     main {
@@ -65,6 +65,10 @@ runtime {
                'jdk.compiler',
                'java.instrument',
                'jdk.crypto.ec']
+    jpackage {
+        installerName = 'underscorebackup'
+        installerType = System.getenv().get("INSTALLER_TYPE")
+    }
 }
 
 tasks.named("compileJava").get().dependsOn("webui")
@@ -161,38 +165,55 @@ distributions {
     }
 }
 
+tasks.jpackageImage.doLast {
+    copy {
+        from "scripts"
+        include "underscorebackup.service"
+        include "startbackupservice.sh"
+        into "build/jpackage/$project.name/bin"
+    }
+
+    copy {
+        from "."
+        include "README.md"
+        into "build/jpackage/$project.name/bin"
+    }
+}
+
+
 dependencies {
 
     implementation (
-            'com.dropbox.core:dropbox-core-sdk:5.2.0',
-            'com.cronutils:cron-utils:9.1.6',
-            'com.fasterxml.jackson.core:jackson-databind:2.13.3',
+            'com.dropbox.core:dropbox-core-sdk:5.3.0',
+            'com.cronutils:cron-utils:9.2.0',
+            'com.fasterxml.jackson.core:jackson-databind:2.13.4',
             'com.google.guava:guava:31.1-jre',
             'com.google.inject:guice:5.1.0',
             'com.hierynomus:smbj:0.11.5',
             'com.joestelmach:natty:0.13',
+            'commons-codec:commons-codec:1.15',
             'commons-cli:commons-cli:1.5.0',
             'javax.xml.bind:jaxb-api:2.3.1',
             'org.apache.commons:commons-lang3:3.12.0',
-            'org.apache.logging.log4j:log4j-api:2.17.2',
-            'org.apache.logging.log4j:log4j-core:2.17.2',
-            'org.apache.logging.log4j:log4j-slf4j-impl:2.17.2',
+            'org.apache.logging.log4j:log4j-api:2.19.0',
+            'org.apache.logging.log4j:log4j-core:2.19.0',
+            'org.apache.logging.log4j:log4j-slf4j2-impl:2.19.0',
             'org.mapdb:mapdb:3.0.8',
             'org.projectlombok:lombok:1.18.24',
             'org.reflections:reflections:0.10.2',
-            'org.slf4j:slf4j-api:1.7.36',
-            'org.takes:takes:1.20',
-            'software.amazon.awssdk:s3control:2.17.209'
+            'org.slf4j:slf4j-api:2.0.0',
+            'org.takes:takes:1.24.4',
+            'software.amazon.awssdk:s3control:2.17.271'
     )
 
     testImplementation (
             'org.hamcrest:hamcrest:2.2',
-            'org.junit.jupiter:junit-jupiter:5.8.2',
-            'org.mockito:mockito-junit-jupiter:4.6.1'
+            'org.junit.jupiter:junit-jupiter:5.9.0',
+            'org.mockito:mockito-junit-jupiter:4.8.0'
     )
 
     testRuntimeOnly (
-            'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+            'org.junit.jupiter:junit-jupiter-engine:5.9.0'
     )
 
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
@@ -228,7 +249,8 @@ task installers(type:Exec) {
         workingDir "${rootProject.projectDir}"
         commandLine './gradlew', "installerPkg"
     } else {
-        commandLine 'true'
+        workingDir "${rootProject.projectDir}"
+        commandLine 'bash', '-c', 'INSTALLER_TYPE=deb ./gradlew jpackage && mv build/jpackage/*.deb build/distributions && INSTALLER_TYPE=rpm ./gradlew jpackage && mv build/jpackage/*.rpm build/distributions'
     }
 }
 
