--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '1.1.0rc2'
+version '1.1.0'
 
 sourceCompatibility = 17
 targetCompatibility = 17
