--- a/webui/package.json
+++ b/webui/package.json
@@ -30,11 +30,20 @@
   },
   "browserslist": [
     "defaults",
-    "not ios_saf < 13"
+    "not ios_saf > 0",
+    "not android > 0",
+    "not samsung > 0",
+    "not bb > 0",
+    "not and_chr > 0",
+    "not and_ff > 0",
+    "not and_qq > 0",
+    "not and_uc > 0"
   ],
   "devDependencies": {
-    "@parcel/packager-raw-url": "^2.7.0",
-    "@parcel/transformer-webmanifest": "^2.7.0",
+    "parcel": "^2.8.0",
+    "@parcel/packager-raw-url": "^2.8.0",
+    "@parcel/transformer-webmanifest": "^2.8.0",
+    "@parcel/validator-typescript": "^2.8.0",
     "@types/lodash": "^4.14.187",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
@@ -42,9 +51,6 @@
     "del": "^7.0.0",
     "gulp": "^4.0.2",
     "gulp-copy": "^4.0.1",
-    "gulp-inline-source": "^4.0.0",
-    "gulp-replace": "^1.1.3",
-    "parcel": "^2.7.0",
     "process": "^0.11.10"
   }
 }
