--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '1.2.0rc1'
+version '1.2.0rc2'
 
 sourceCompatibility = 17
 targetCompatibility = 17
@@ -39,6 +39,7 @@ task createProperties(dependsOn: processResources) {
         new File("$buildDir/resources/main/version.properties").withWriter { w ->
             Properties p = new Properties()
             p['version'] = rootProject.version.toString()
+            p['edition'] = ""
             p.store w, null
         }
     }
