--- a/webui/package.json
+++ b/webui/package.json
@@ -14,7 +14,7 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "date-fns": "^2.29.3",
-    "lodash": "^4.17.21",
+    "fast-equals": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
