--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '1.2.0rc3'
+version '1.2.0'
 
 sourceCompatibility = 17
 targetCompatibility = 17
