Two minor fixes.
* Fixed a memory leak when restoring very large repositories.
* Delete unused directories when using local file or SMB backup destinations.

--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -17,9 +17,10 @@ jobs:
     strategy:
       matrix:
         os:
-          - windows-latest
+          - windows-x64
           - ubuntu-latest
           - macos-latest
+          - macos-arm
     runs-on: ${{ matrix.os }}
 
     steps:
