Added optional (off by default) continuous backups which means that after the first backup is completed the system will monitor file system changes and back up files as they are changed more or less immediately.
Added code signing to Windows installer to hopefully remove Windows warning when installing.

Also includes several other tweaks and fixes.

--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -79,6 +79,14 @@ jobs:
         with:
           arguments: allDistTest
 
+      - name: Apply code signature to Windows installer
+        if: contains(matrix.os, 'windows')
+        env:
+          CERT_DATA: ${{ secrets.WINDOWS_CODE_SIGN }}
+          CERT_PASSWORD: ${{ secrets.WINDOWS_SIGN_PASSWORD }}
+        run: |
+          perl windows\signinstaller.pl
+
       - name: Upload binaries to release
         uses: xresloader/upload-to-github-release@v1
         env:
