Sign executables inside of Windows distribution as well as installer.
Fixed several issues with continuous backups including a potential deadlock as well as an issue with deleting a non existing file potentially causing extraneous backup log entries. Also greatly increased the speed at processing changes reducing the chance of being overloading when confronted with a large amount of updates.

Finally added the capability to create a support bundle to help with future support cases. You can choose what information you wish to include in the bundle including logs, metadata repository, configuration and the public key definition.

--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -76,6 +76,8 @@ jobs:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_ACTION: yes
           GITHUB_TARGET: ${{ matrix.os }}
+          CERT_DATA: ${{ secrets.WINDOWS_CODE_SIGN }}
+          CERT_PASSWORD: ${{ secrets.WINDOWS_SIGN_PASSWORD }}
         with:
           arguments: allDistTest
 
@@ -85,7 +87,19 @@ jobs:
           CERT_DATA: ${{ secrets.WINDOWS_CODE_SIGN }}
           CERT_PASSWORD: ${{ secrets.WINDOWS_SIGN_PASSWORD }}
         run: |
-          perl windows\signinstaller.pl
+          perl windows\signexe.pl required build\distributions
+
+      - name: Remove duplicate distributions for Windows
+        if: contains(matrix.os, 'windows')
+        run: |
+          del build\distributions\*.tar
+          del build\distributions\*.zip
+
+      - name: Remove duplicate distributions for MacOS
+        if: contains(matrix.os, 'macos')
+        run: |
+          rm build/distributions/*.tar
+          rm build/distributions/*.zip
 
       - name: Upload binaries to release
         uses: xresloader/upload-to-github-release@v1
