Several fixes from the last release candidate. Although this is a pretty long list, most of these issues are very minor and a lot of the issues were found when implementing extensive automated testing of service functionality which is now running on every build of both service and application changes.
* Implemented a way to ensure that competing commands can not be started simultaneously from the web UI.
* Changed integration tests to not use developer mode allowing multiple tests to run at the same time on a single computer.
* Added ability to configure command line on Linux systemd installations.
* Fixed minor issue where resetting configuration could lead to error if system was not idle.
* Changed shutdown to complete the response before actually exiting the process.
* Added part file extension to be excluded by default.
* Bumped the number of iterations for region auto detect to 10 from 5.
* Register the version of the application with the service per source.
* Fixed potential new deadlock when finishing up scanning for files to back up.
* Fixed a potential incorrect warning when using service destination due to missing read after write consistency of identity.
* Fixed UI indicating busy while browsing other sources.
* Fixed issue adopting service sources.
* Fixed issue where secret registration could be incorrect.
* Fixed some minor async related UI issues in share interface.

--- a/scripts/underscorebackup.service
+++ b/scripts/underscorebackup.service
@@ -2,10 +2,11 @@
 Description=Underscore Backup
 
 [Service]
+EnvironmentFile=-/etc/default/underscorebackup
 User=root
 WorkingDirectory=/tmp
 StandardOutput=null
-ExecStart=/opt/underscorebackup/bin/underscorebackup interactive
+ExecStart=/opt/underscorebackup/bin/underscorebackup $UNDERSCOREBACKUP_OPTS interactive
 SuccessExitStatus=0
 TimeoutStopSec=60
 Restart=on-failure
