General stability and reliability enhancements.
* Better handling of eventual consistency for UB service.
* Tweaked connection and read timeouts for remote calls.
* Fixed warning of deprecation from Log4j when running command line.
* Updated and cleaned up README file.
* Switch from Gulp to Grunt for web UI build.
* Don't allow generating a new encryption key if one already exists.

--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '2.0.0rc3'
+version '2.0.0rc4'
 
 def archiveName = 'underscorebackup'
 def edition = ''
@@ -180,6 +180,7 @@ dependencies {
     )
 
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
+    annotationProcessor 'org.apache.logging.log4j:log4j-core:2.20.0'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'
 }
 
