--- a/webui/package.json
+++ b/webui/package.json
@@ -5,8 +5,8 @@
   "private": false,
   "scripts": {
     "start": "parcel serve ./src/index.html -p 3000",
-    "build": "gulp",
-    "clean": "gulp clean"
+    "build": "grunt",
+    "clean": "grunt clean"
   },
   "dependencies": {
     "@date-io/date-fns": "^2.16.0",
@@ -43,10 +43,10 @@
     "@types/zxcvbn": "^4.4.1",
     "crypto-browserify": "^3.12.0",
     "cypress": "^12.7.0",
-    "del": "^7.0.0",
     "events": "^3.3.0",
-    "gulp": "^4.0.2",
-    "gulp-copy": "^4.0.1",
+    "grunt": "^1.6.1",
+    "grunt-contrib-clean": "^2.0.1",
+    "grunt-exec": "^3.0.0",
     "parcel": "^2.8.3",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
