Stability and reliability enhancements
* When invalid entries detected in the metadata repository remove them.
* Fixed infinite loop when errors happen scanning set.
* Fixed retries on certain network errors for service calls.
* Fixed issue with sharing files containing super blocks.

--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '2.0.0rc8'
+version '2.0.0rc10'
 
 def archiveName = 'underscorebackup'
 def edition = ''
@@ -132,7 +132,7 @@ tasks.jpackageImage.doLast {
         copy {
             from "."
             include "README.md"
-            into "build/jpackage/${rootProject.name}/"
+            into "build/jpackage/underscorebackup/"
         }
     }
 
