--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '2.0.0rc10'
+version '2.0.0.0'
+def releaseType = ''
 
 def archiveName = 'underscorebackup'
 def edition = ''
@@ -41,7 +42,7 @@ task createProperties(dependsOn: processResources) {
     doLast {
         new File("$buildDir/resources/main/version.properties").withWriter { w ->
             Properties p = new Properties()
-            p['version'] = rootProject.version.toString()
+            p['version'] = rootProject.version.toString() + releaseType
             p['edition'] = edition
             p.store w, null
         }
@@ -70,7 +71,7 @@ runtime {
                'java.instrument',
                'jdk.crypto.ec']
     jpackage {
-        appVersion = "${rootProject.version}".replaceAll('(pre|rc)\\d+$', "")
+        appVersion = "${rootProject.version}"
         installerName = archiveName
         if (project.properties['installer_type']) {
             if (project.property("installer_type") == "win-console") {
@@ -192,7 +193,7 @@ task installerDef(type: Copy) {
     from("${rootProject.projectDir}/windows/innosetup.iss")
     rename("innosetup.iss", "innosetup-expanded.iss")
     expand([
-            applicationVersion: "${rootProject.version}"
+            applicationVersion: "${rootProject.version}${releaseType}"
     ])
     into("${rootProject.projectDir}/windows")
 }
@@ -224,20 +225,20 @@ task installerWindows(dependsOn: [installerImage, installerDef], type: Exec) {
 
 task installerLinux(type: Exec) {
     workingDir "${rootProject.projectDir}"
-    environment "VERSION", "${rootProject.version}"
+    environment "VERSION", "${rootProject.version}${releaseType}"
     commandLine 'bash', '-c', "linux/builddeb.sh && linux/buildrpm.sh"
 }
 
 task installerPkg(dependsOn: ["runtime"], type: Exec) {
     workingDir "${rootProject.projectDir}"
     executable 'osx/createinstaller.sh'
-    args "${rootProject.version}"
+    args "${rootProject.version}${releaseType}"
 }
 
 task uninstallerPkg(type: Exec) {
     workingDir "${rootProject.projectDir}"
     executable 'osx/createuninstaller.sh'
-    args "${rootProject.version}"
+    args "${rootProject.version}${releaseType}"
 }
 
 task installer {
@@ -266,7 +267,7 @@ task integrationTest(type: Exec) {
         workingDir "${rootProject.projectDir}"
         commandLine "perl", "integrationtests\\testsuite.pl", "$buildDir\\integrationtests", "$buildDir\\installerimage\\underscorebackup.exe", "${rootProject.projectDir}\\webui"
     } else {
-        commandLine "${rootProject.projectDir}/integrationtests/executetests.sh", "$buildDir/distributions/${archiveName}-${rootProject.version}.tar", "${rootProject.projectDir}/webui"
+        commandLine "${rootProject.projectDir}/integrationtests/executetests.sh", "$buildDir/distributions/${archiveName}-${rootProject.version}${releaseType}.tar", "${rootProject.projectDir}/webui"
     }
 }
 
