--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '2.0.2.2'
+version '2.0.2.3'
 def releaseType = ''
 
 def archiveName = 'underscorebackup'
@@ -163,6 +163,7 @@ dependencies {
             'commons-codec:commons-codec:1.15',
             'de.mkammerer:argon2-jvm:2.11',
             'io.swagger:swagger-annotations:1.6.9',
+            'jakarta.annotation:jakarta.annotation-api:1.3.5',
             'javax.xml.bind:jaxb-api:2.3.1',
             'org.apache.commons:commons-lang3:3.12.0',
             'commons-net:commons-net:3.9.0',
