--- a/windows/Choco/underscorebackup.nuspec
+++ b/windows/Choco/underscorebackup.nuspec
@@ -5,7 +5,7 @@
     <!-- version should MATCH as closely as possible with the underlying software -->
     <!-- Is the version a prerelease of a version? https://docs.nuget.org/create/versioning#creating-prerelease-packages -->
     <!-- Note that unstable versions like 0.0.1 can be considered a released version, but it's possible that one can release a 0.0.1-beta before you release a 0.0.1 version. If the version number is final, that is considered a released version and not a prerelease. -->
-    <version>2.0.4.0</version>
+    <version>2.0.4.1</version>
     <packageSourceUrl>https://github.com/UnderscoreResearch/UnderscoreBackup/tree/master/windows/Choco</packageSourceUrl>
     <owners>Underscore Research LLC</owners>
 
@@ -27,7 +27,7 @@
 
 * Ties into [a free service](https://underscorebackup.com/) that helps coordination of your backup sources, optional encryption key recovery and coordination of sharing of backup data. However, all online services are optional, and you can run the backup software without an online account.
 
-* Provides optional [paid for storage service](https://underscorebackup.com/pricing) as part of the service offering. However this is also optional and you can use any supported storage service you wish.
+* Provides optional [paid for storage service](https://underscorebackup.com/pricing) as part of the service offering. This is entirely optional and you can use any supported storage service you wish.
 
 * Pre-egress encryption means no proprietary data leaves your system in a format where it can be compromised as long as your private key is not compromised.
 
