--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '2.1.0.1'
-def releaseType = 'rc'
+version '2.1.0.2'
+def releaseType = ''
 
 def archiveName = 'underscorebackup'
 def edition = ''
