Can now store and recover file permissions. Also included in this update is the ability to have multiple manifest destinations defined in a single backup.
* Fixed issues with no encryption and sharing.
* Fixed issue with restoring data from the destination where encryption was changed.
* Will now do a proper shutdown when installing instead of just killing the process on Windows.
* Fixed deadlock problem with new LMDB-based manifest storage.
* Fixed issue with UI not indicating busy long enough for rebuild and activate shares.

--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '2.2.0.0'
-def releaseType = 'pre'
+version '2.2.0.1'
+def releaseType = 'rc'
 
 def archiveName = 'underscorebackup'
 def edition = ''
