--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,16 @@ plugins {
 
 application {
     mainClass = 'com.underscoreresearch.backup.cli.Main'
-    applicationDefaultJvmArgs = ['-Xmx256m',
-                                 '--add-opens=java.base/java.nio=ALL-UNNAMED',
-                                 '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED']
+    applicationDefaultJvmArgs = [
+//          '-agentlib:jdwp=transport=dt_socket,server=y,suspend=n',
+            '-Xmx256m',
+            '--add-opens=java.base/java.nio=ALL-UNNAMED',
+            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+    ]
 }
 
 group 'com.underscoreresearch'
-version '2.2.0.3'
+version '2.2.0.4'
 def releaseType = 'rc'
 
 def archiveName = 'underscorebackup'
@@ -154,15 +157,15 @@ dependencies {
     implementation(
             'com.cronutils:cron-utils:9.2.1',
             'com.dropbox.core:dropbox-core-sdk:5.4.5',
-            'com.fasterxml.jackson.core:jackson-databind:2.15.1',
-            'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.1',
-            'com.google.guava:guava:31.1-jre',
+            'com.fasterxml.jackson.core:jackson-databind:2.15.2',
+            'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2',
+            'com.google.guava:guava:32.0.0-jre',
             'com.google.inject:guice:7.0.0',
-            'com.hierynomus:smbj:0.11.5',
+            'com.hierynomus:smbj:0.12.1',
             'org.lmdbjava:lmdbjava:0.8.3',
             'com.joestelmach:natty:0.13',
             'commons-cli:commons-cli:1.5.0',
-            'commons-codec:commons-codec:1.15',
+            'commons-codec:commons-codec:1.16.0',
             'de.mkammerer:argon2-jvm:2.11',
             'io.swagger:swagger-annotations:1.6.11',
             'jakarta.annotation:jakarta.annotation-api:2.1.1',
@@ -178,13 +181,13 @@ dependencies {
             'org.reflections:reflections:0.10.2',
             'org.slf4j:slf4j-api:2.0.7',
             'org.takes:takes:1.24.4',
-            'software.amazon.awssdk:s3control:2.20.73'
+            'software.amazon.awssdk:s3control:2.20.103'
     )
 
     testImplementation(
             'org.hamcrest:hamcrest:2.2',
             'org.junit.jupiter:junit-jupiter:5.9.3',
-            'org.mockito:mockito-junit-jupiter:5.3.1'
+            'org.mockito:mockito-junit-jupiter:5.4.0'
     )
 
     testRuntimeOnly(
