Stability and performance enhancements
* Allow stopping scheduled runs when idle from UI.
* Write daemon STDERR to syslog on Linux.
* Improved stability of web authentication.
* Improved handling of failed migrations.
* Grow database on OS's that support sparse files for LMDB storage.
* LMDB now use exclusive commit lock.

--- a/scripts/underscorebackup.service
+++ b/scripts/underscorebackup.service
@@ -6,6 +6,8 @@ EnvironmentFile=-/etc/default/underscorebackup
 User=root
 WorkingDirectory=/tmp
 StandardOutput=null
+StandardError=syslog
+SyslogIdentifier=underscorebackup
 ExecStart=/opt/underscorebackup/bin/underscorebackup $UNDERSCOREBACKUP_OPTS interactive
 SuccessExitStatus=0
 TimeoutStopSec=60
