--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '2.2.0.6'
-def releaseType = 'rc'
+version '2.2.0.7'
+def releaseType = ''
 
 def archiveName = 'underscorebackup'
 def edition = ''
